--- a/Index.html
+++ b/Index.html
@@ -13,17 +13,17 @@
 <table id="Table_01" width="800" height="357" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td colspan="5">
-			<img src="images/index_01.jpg" width="800" height="83" alt=""></td>
+			<img src="Images/index_01.jpg" width="800" height="83" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/index_02.jpg" width="162" height="36" alt=""></td>
+			<img src="Images/index_02.jpg" width="162" height="36" alt=""></td>
 		<td>
 			<a href="index.html">
 				<img src="images/header-slice_03.jpg" width="170" height="36" border="0" alt="Menu utama"></a></td>
 		<td>
 			<a href="gallery.html">
-				<img src="images/header-slice_04.jpg" width="132" height="36" border="0" alt="Kumpulan Karya Terbaik"></a></td>
+				<img src="Images/header-slice_04.jpg" width="132" height="36" border="0" alt="Kumpulan Karya Terbaik"></a></td>
 		<td>
 			<a href="order.html">
 				<img src="images/header-slice_05.jpg" width="131" height="36" border="0" alt="Cara Pemesanan"></a></td>
